--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="Join 2FASTT, the chill social running club on campus. Whether you run every day or just want to jog and meet people - no pressure, just community." />
     <meta name="author" content="2FASTT Running Club" />
 
-    <meta property="og:title" content="2FASTT - RU RUNNING? | Campus Running Club" />
+    <meta property="og:title" content="2FASTT Run Club" />
     <meta property="og:description" content="Join 2FASTT, the chill social running club on campus. Whether you run every day or just want to jog and meet people - no pressure, just community." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/2fastt-logo-clean.jpeg" />
