--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       }(window.location))
     </script>
     <link rel="icon" href="/src/assets/2fastt-logo-clean.jpeg" type="image/jpeg">
-    <title>2FASTT - RU RUNNING? | Campus Running Club</title>
+    <title>2FASTT Run Club</title>
     <meta name="description" content="Join 2FASTT, the chill social running club on campus. Whether you run every day or just want to jog and meet people - no pressure, just community." />
-    <meta name="author" content="2FASTT Running Club" />
+    <meta name="author" content="2FASTT Run Club" />
 
     <meta property="og:title" content="2FASTT Run Club" />
     <meta property="og:description" content="Join 2FASTT, the chill social running club on campus. Whether you run every day or just want to jog and meet people - no pressure, just community." />
